--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
         </ul>
       </nav>
   </header>
+<main class="introducao">
+  <img src="./img/foto.jpeg" alt="foto Johnny Matheus">
 
+</main>
 
 
 </body>
