--- a/index.html
+++ b/index.html
@@ -10,20 +10,121 @@
 
 <body>
   <header class="header">
-      <h1>Johnny Matheus</h1>
-      <nav>
-        <ul class="header-menu">
-          <li><a href="#experiencia"> Experiência</a></li>
-          <li><a href="formacao">Formação</a></li>
-          <li><a href="#contato">Contato</a></li>
-        </ul>
-      </nav>
+    <button id="btnSaudacao">Clique aqui</button>
+    <button id="btnDarkMode">🌙 Alternar Tema</button>
+    <h1>Johnny Matheus</h1>
+    <nav>
+      <ul class="header-menu">
+        <li><a href="#experiencia"> Experiência</a></li>
+        <li><a href="#formacao">Formação</a></li>
+        <li><a href="#contato">Contato</a></li>
+      </ul>
+    </nav>
   </header>
-<main class="introducao">
-  <img src="./img/foto.jpeg" alt="foto Johnny Matheus">
+  <main class="introducao">
+    <img src="./img/foto.jpg" alt="foto Johnny Matheus">
+    <div>
+      <h1>Desenvolvedor</br> Front-End & Back-End</h1>
+      <p>Localizado em São Miguel do Oeste - Santa Catarina </p>
+    </div>
 
-</main>
+  </main>
+
+  <section class="experiencia" id="experiencia" aria-label="Experiência">
+    <h2 class="subtitulo">Experiência</h2>
+    <div>
+      <p class="experiencia-texto">Olá meu nome é <strong>Johnny Matheus Nogueira de Medeiro</strong>, natural de Campo Grande - Mato Grosso do Sul 🤠, e estudante de <strong>Ciência da Computação</strong> na Universidade do Oeste de Santa Catarina <strong>UNOESC</strong>.</p>
 
 
+      <div class="empresa">
+        <span class="empresa-ano">2010</span>
+        <h3 class="empresa-titulo">Desenvolvedor Front-End</h3>
+        <span class="empresa-titulo">Freelancer</span>
+        <p class="empresa-texto"> Criando landing pages </p>
+        <ul class="empresa-habilidade">
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>Javascript</li>
+          <li>UX Desing</li>
+          <li>UI Desing</li>
+        </ul>
+      </div>
+      <div class="empresa">
+        <span class="empresa-ano">2020 -23</span>
+        <h3 class="empresa-titulo">Provedor Internet</h3>
+        <span class="empresa-titulo">Suporte Avançado</span>
+        <p class="empresa-texto"> landing pages </p>
+        <ul class="empresa-habilidade">
+          <li>Redes de Computadores</li>
+          <li>Configurações de equipamentos de rede</li>
+          <li>Suporte ao cliente remoto</li>
+          <li>Suporte Call Center </li>
+          <li>Soluções de problemas de rede</li>
+        </ul>
+      </div>
+      <div class="empresa">
+        <span class="empresa-ano">2020</span>
+        <h3 class="empresa-titulo">Empresa de Software</h3>
+        <span class="empresa-titulo">Programador</span>
+        <p class="empresa-texto"> Desenvolvedor de Software</p>
+        <ul class="empresa-habilidade">
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>Javascript</li>
+          <li>UX Desing</li>
+          <li>UI Desing</li>
+        </ul>
+
+      </div>
+    </div>
+  </section>
+
+
+  <section>
+
+  </section class="formacao" id="formacao" aria-label="Fromação">
+  <div class="formacao-container">
+    <h2 class="subtitulo">Formação</h2>
+  </div>
+  <p class="formacao-texto">
+    Atualmente sou estudante do Curso de <strong>Ciência da Computação</strong> 🎓,desenvolvimento Web na <strong>Origamid🗺️</strong>,desenvolvimento full stack na <strong>B7 🧑🏾‍💻</strong> e <strong>Jdevtreinamento 💪🏾</strong>.
+  </p>
+
+  <ul class="faculdade-lista">
+    <li class="faculdade">
+      <span class="faculdade-tipo">Bacharel</span>
+      <h3 class="faculdade-curso">Ciência da Computação</h3>
+      <span class="faculdade-instituicao">UNOESC</span>
+    </li>
+
+    <li class="faculdade">
+      <span class="faculdade-tipo">Tècnologo</span>
+      <h3 class="faculdade-curso">Análise e desenvolvimento sistemas</h3>
+      <span class="faculdade-instituicao">UNIP</span>
+    </li>
+    <li class="faculdade">
+      <span class="faculdade-tipo">Especialização/span>
+        <h3 class="faculdade-curso">Desenvolvimento Software</h3>
+        <span class="faculdade-instituicao">SENAC</span>
+    </li>
+
+    <li class="faculdade">
+      <span class="faculdade-tipo">Especialização</span>
+      <h3 class="faculdade-curso">Desenvolvimento WEB</h3>
+      <span class="faculdade-instituicao">SENAC</span>
+    </li>
+  </ul>
+
+  <div class="formacao-extra">
+    <div class="cursos">
+      
+    </div>
+  </div>
+
+
+  </section>
+
+  <script src="/JS/script.js"></script>
 </body>
+
 </html>
