--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <h1>Johnny Matheus</h1>
     <nav>
       <ul class="header-menu">
-        <li><a href="#experiencia"> Experiência</a></li>
+        <li><a href="#experiencia">Experiência</a></li>
         <li><a href="#formacao">Formação</a></li>
         <li><a href="#contato">Contato</a></li>
       </ul>
     </nav>
   </header>
   <main class="introducao">
-    <img src="./img/foto.jpg" alt="foto Johnny Matheus">
+    <img src="./img/perfil.jpg" alt="foto Johnny Matheus">
     <div>
       <h1>Desenvolvedor</br> Front-End & Back-End</h1>
       <p>Localizado em São Miguel do Oeste - Santa Catarina </p>
@@ -62,6 +62,8 @@
           <li>Soluções de problemas de rede</li>
         </ul>
       </div>
+
+
       <div class="empresa">
         <span class="empresa-ano">2020</span>
         <h3 class="empresa-titulo">Empresa de Software</h3>
@@ -74,57 +76,82 @@
           <li>UX Desing</li>
           <li>UI Desing</li>
         </ul>
-
       </div>
     </div>
+
   </section>
 
 
   <section>
 
-  </section class="formacao" id="formacao" aria-label="Fromação">
-  <div class="formacao-container">
-    <h2 class="subtitulo">Formação</h2>
-  </div>
-  <p class="formacao-texto">
-    Atualmente sou estudante do Curso de <strong>Ciência da Computação</strong> 🎓,desenvolvimento Web na <strong>Origamid🗺️</strong>,desenvolvimento full stack na <strong>B7 🧑🏾‍💻</strong> e <strong>Jdevtreinamento 💪🏾</strong>.
-  </p>
+    <section class="formacao" id="formacao" aria-label="Fromação">
+      <div class="formacao-container">
+        <h2 class="subtitulo">Formação</h2>
 
-  <ul class="faculdade-lista">
-    <li class="faculdade">
-      <span class="faculdade-tipo">Bacharel</span>
-      <h3 class="faculdade-curso">Ciência da Computação</h3>
-      <span class="faculdade-instituicao">UNOESC</span>
-    </li>
+        <p class="formacao-texto">
+          Atualmente sou estudante do Curso de <strong>Ciência da Computação</strong> 🎓,desenvolvimento Web na <strong>Origamid🗺️</strong>,desenvolvimento full stack na <strong>B7 🧑🏾‍💻</strong> e <strong>Jdevtreinamento 💪🏾</strong>.
+        </p>
 
-    <li class="faculdade">
-      <span class="faculdade-tipo">Tècnologo</span>
-      <h3 class="faculdade-curso">Análise e desenvolvimento sistemas</h3>
-      <span class="faculdade-instituicao">UNIP</span>
-    </li>
-    <li class="faculdade">
-      <span class="faculdade-tipo">Especialização/span>
-        <h3 class="faculdade-curso">Desenvolvimento Software</h3>
-        <span class="faculdade-instituicao">SENAC</span>
-    </li>
+        <ul class="faculdade-lista">
+          <li class="faculdade">
+            <span class="faculdade-tipo">Bacharel</span>
+            <h3 class="faculdade-curso">Ciência da Computação</h3>
+            <span class="faculdade-instituicao">UNOESC</span>
+          </li>
 
-    <li class="faculdade">
-      <span class="faculdade-tipo">Especialização</span>
-      <h3 class="faculdade-curso">Desenvolvimento WEB</h3>
-      <span class="faculdade-instituicao">SENAC</span>
-    </li>
-  </ul>
+          <li class="faculdade">
+            <span class="faculdade-tipo">Tècnologo</span>
+            <h3 class="faculdade-curso">Análise e desenvolvimento sistemas</h3>
+            <span class="faculdade-instituicao">UNIP</span>
+          </li>
+          <li class="faculdade">
+            <span class="faculdade-tipo">Especialização</span>
+            <h3 class="faculdade-curso">Desenvolvimento Software</h3>
+            <span class="faculdade-instituicao">SENAC</span>
+          </li>
 
-  <div class="formacao-extra">
-    <div class="cursos">
-      
-    </div>
-  </div>
+          <li class="faculdade">
+            <span class="faculdade-tipo">Especialização</span>
+            <h3 class="faculdade-curso">Desenvolvimento WEB</h3>
+            <span class="faculdade-instituicao">SENAC</span>
+          </li>
+        </ul>
 
+        <div class="formacao-extra">
+          <div class="cursos">
+            <h3>Cursos Intensivos</h3>
+            <ul>
+              <li>UI Design para Iniciantes <span>56h</span></li>
+              <li>Redes de Computadores <span>2400horas</span></li>
+            </ul>
+          </div>
+          <div class="idiomas">
+            <h3>idiomas</h3>
+            <ul>
+              <li>Inglês <span> / Básico</span></li>
+              <li>Espanhol <span> / Básico</span></li>
+            </ul>
+          </div>
+        </div>
+      </div>
 
-  </section>
+    </section>
 
-  <script src="/JS/script.js"></script>
+    <footer class="footer" id="contato">
+      <div class="footer-container">
+        <p class="footer-texto"> Entre em contato comigo pelas redes sociais</p>
+        <ul class="footer-contato">
+          <li>johnny@email.com</li>
+          <li>+55 11 4002-8922</li>
+          <li><a href="/">Linkedin</a></li>
+          <li><a href="/">@instagram</a></li>
+          <li><a href="/">github</a></li>
+
+        </ul>
+        <p class="footer-copy">Todos os direitos reservados.</p>
+      </div>
+    </footer>
+    <script src="/JS/script.js"></script>
 </body>
 
 </html>
