corrigido paleta de cores

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <h3 class="empresa-titulo">Desenvolvedor Front-End</h3>
         <span class="empresa-titulo">Freelancer</span>
         <p class="empresa-texto"> Criando landing pages </p>
-        <ul class="empresa-habilidade">
+        <ul class="empresa-habilidades">
           <li>HTML</li>
           <li>CSS</li>
           <li>Javascript</li>
@@ -54,7 +54,7 @@
         <h3 class="empresa-titulo">Provedor Internet</h3>
         <span class="empresa-titulo">Suporte Avançado</span>
         <p class="empresa-texto"> landing pages </p>
-        <ul class="empresa-habilidade">
+        <ul class="empresa-habilidades">
           <li>Redes de Computadores</li>
           <li>Configurações de equipamentos de rede</li>
           <li>Suporte ao cliente remoto</li>
@@ -69,7 +69,7 @@
         <h3 class="empresa-titulo">Empresa de Software</h3>
         <span class="empresa-titulo">Programador</span>
         <p class="empresa-texto"> Desenvolvedor de Software</p>
-        <ul class="empresa-habilidade">
+        <ul class="empresa-habilidades">
           <li>HTML</li>
           <li>CSS</li>
           <li>Javascript</li>
