--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+  <marquee>
+    BEM VINDO
+  </marquee>
   <header class="header">
     <button id="btnSaudacao">Clique aqui</button>
     <button id="btnDarkMode">🌙 Alternar Tema</button>
