--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <h2 class="subtitulo">Formação</h2>
 
         <p class="formacao-texto">
-          Atualmente sou estudante do Curso de <strong>Ciência da Computação</strong> 🎓,desenvolvimento Web na <strong>Origamid🗺️</strong>,desenvolvimento full stack na <strong>B7 🧑🏾‍💻</strong> e <strong>Jdevtreinamento 💪🏾</strong>.
+          Atualmente sou estudante do Curso de <strong>Ciência da Computação</strong> 🎓 na UNOESC,desenvolvimento Web na <strong>Origamid🗺️</strong>,desenvolvimento full stack na <strong>B7 🧑🏾‍💻</strong> e <strong>Jdevtreinamento 💪🏾</strong>.
         </p>
 
         <ul class="faculdade-lista">
