Corrigido erro do Github na animação do JS

--- a/index.html
+++ b/index.html
@@ -154,6 +154,10 @@
         <p class="footer-copy">Todos os direitos reservados.</p>
       </div>
     </footer>
+    <!-- ESTE IMPORTE FOI FEITO PARA QUE O JS POSSA RODAR NO GITHUB NA PAGINA INICIAL -->
+    <script src="/script.js"></script>
+
+    
     <script src="/JS/script.js"></script>
 </body>
 
