--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
     <!-- ESTE IMPORTE FOI FEITO PARA QUE O JS POSSA RODAR NO GITHUB NA PAGINA INICIAL -->
     <script src="/script.js"></script>
 
-    
-    <script src="/JS/script.js"></script>
+
+    <!-- <script src="/JS/script.js"></script> -->
 </body>
 
 </html>
