--- a/index.html
+++ b/index.html
@@ -155,9 +155,7 @@
       </div>
     </footer>
     <!-- ESTE IMPORTE FOI FEITO PARA QUE O JS POSSA RODAR NO GITHUB NA PAGINA INICIAL -->
-    <script src="/script.js"></script>
-
-
+    <script src="script.js"></script>
     <!-- <script src="/JS/script.js"></script> -->
 </body>
 
